--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: get_weather
-description: A new Flutter project.
+description: A Weather Application Built Using Flutter.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -23,6 +23,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  # Network Call
+  http: ^0.12.2
+  data_connection_checker: ^0.3.4
+  # Local Cache
+  shared_preferences: ^0.5.8
+  # State Management
+  stacked: ^1.7.4
+  # App Services
+  stacked_services: ^0.4.8
+  # Functional Programming Thingies
+  dartz: ^0.9.1
+  # Dependency Injection
+  get_it: ^4.0.4
+  # Navigation
+  auto_route: ^0.6.6
+  # Platform Specific UI
+  native_widgets: ^1.3.7+1
+  # Network State
+  
+  
+  
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,6 +53,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  # Code Generation
+  build_runner: ^1.10.0
+  auto_route_generator: ^0.6.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
