--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   equatable: ^1.2.2
   flutter_platform_widgets: ^0.51.0
   geocoding: ^1.0.5
-  geolocator: ^6.1.1
+  geolocator: ^6.2.1
   get_it: ^4.0.4
   http: ^0.12.2
   shared_preferences: ^0.5.8
@@ -54,8 +54,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
